--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,40 @@ h3{
 	font-size: 45px;
 	color: red;
 }
+@media (min-width: 600px){
+	.title{
+		font-size: 30px;
+		margin: 15px;
+	}
+	.covid-container{
+		margin: 20px 0;
+	}
+	#logo img{
+		width: 200px
+	}
+	.datos{
+		margin: 20px 0;
+	}
+	.instrucciones{
+		display: flex;
+		flex-direction: column;
+	}
+	.col-md-12{
+		display: flex;
+		justify-content: center;
+		width: 100%;
+	}
+	#logo img {
+		height: 120px !important;
+		width: 120px !important;
+		margin-top: 20px;
+	}
+}
+@media (min-width: 1000px){
+	.datos{
+		margin: 20px 200px;
+	}
+}
 select {
 	padding: 15px 18px;
 	cursor: pointer;
@@ -335,8 +369,8 @@ img { max-width: 100%; }
 }
 
 #logo img {
-	height: 42px;
-	width: auto;
+	height: 90px;
+	width: 90px;
 	top: 50%;
 	position: relative;
 	transform: translate3d(0,-50%,0);
@@ -2152,7 +2186,7 @@ em.mm-counter+a.mm-fullsubopen+span {
 	#header { height: 76px; }
 
 	#logo { border: none; }
-	#logo img { border: none; max-width: 100px; height: auto; border-radius: 50%;}
+	
 	
 	header.fullwidth .container {
 		padding: 0 20px;
